syntax = "proto3";

package goim.common;
option go_package = "grpc";

message ClientMsg {
  ClientHi hi = 1;
  ClientLogin login = 2;
  ClientSub sub = 3;
  ClientLeave leave = 4;
  ClientPub pub = 5;
  ClientGet get = 6;
  string on_behalf_of = 7;
}

message ClientHi {
  string id = 1;
  string user_agent = 2;
  string ver = 3;
  string device_id = 4;
  string lang = 5;
  string platform = 6;
}

message ClientLogin  {
  string id = 1;
  string scheme = 2;
  bytes secret = 3;
}

message ClientSub {
  string id = 1;
  string topic = 2;
  SetQuery set_query = 3;
  GetQuery get_query = 4;
  bool background = 5;
}

message ClientLeave {
  string id = 1;
  string topic = 2;
  bool unsub = 3;
}

message ClientPub {
  string id = 1;
  string topic = 2;
  bool no_echo = 3;
  map<string, bytes> head = 4;
  bytes content = 5;
}

message ClientGet {
  string id = 1;
  string topic = 2;
  GetQuery query = 3;
}

message SetQuery {
  SetSub sub = 1;
}

message SetSub {
  string user_id = 1;
  string mode = 2;
}

message GetQuery {
  string what = 1;
  GetOpts sub = 2;
  GetOpts data = 3;
}

message GetOpts {
  int64 if_modified_since = 1;
  string user = 2;
  string topic = 3;
  int32 since_id = 4;
  int32 before_id = 5;
  int32 limit = 6;
}

// Cumulative message
message ServerMsg {
  oneof Message {
    ServerCtrl ctrl = 1;
    ServerData data = 2;
  }
  string topic = 3;
}

message ServerCtrl {
  string id = 1;
  string topic = 2;
  int32 code = 3;
  string text = 4;
  map<string, bytes> params = 5;
}

message ServerData {
  string topic = 1;
  string from_user_id = 2;
  int64 timestamp = 7;
  int64 deleted_at = 3;
  int32 seq_id = 4;
  map<string, bytes> head = 5;
  bytes content = 6;
}